# exercise

beautiful_number/: CMakeLists.txt  README.md  cpp11.cpp  cpp11_constexpr.cpp  cpp14_constexpr.cpp
go_server_example/: README.md  docker-compose.yaml
go_server_example/backend/: Dockerfile  database.go  go.mod  main.go  note.go  server.go  wait-for-it.sh
go_server_example/frontend/: Dockerfile  go.mod  main.go
go_server_example/frontend/tmpl/: delete.html  get.html  post.html  put.html
uefi_removable_storage/: README.md  main.c  test.inf
